--- a/_inc/client/setup-wizard/style.scss
+++ b/_inc/client/setup-wizard/style.scss
@@ -5,3 +5,8 @@
 	box-shadow: 0px 2px 6px rgba( 0, 0, 0, 0.03 ), 0px 1px 2px rgba( 0, 0, 0, 0.03 );
 	border: 1px solid #dcdcde;
 }
+
+.jp-setup-wizard-subtitle {
+	font-weight: 600;
+	font-size: 1.33em;
+}
