WIP of styling the checkbox answers

--- a/_inc/client/setup-wizard/income-question/style.scss
+++ b/_inc/client/setup-wizard/income-question/style.scss
@@ -1,4 +1,10 @@
 .jp-setup-wizard-subtitle {
 	font-weight: 600;
-	font-size: 1.33em;
+	font-size: 1.33rem;
+}
+
+.jp-setup-wizard-income-answer-container {
+	display: grid;
+	grid-template-rows: auto auto;
+	grid-template-columns: auto auto;
 }
