--- a/_inc/client/setup-wizard/checklist-answer/style.scss
+++ b/_inc/client/setup-wizard/checklist-answer/style.scss
@@ -1,6 +1,6 @@
 .jp-checklist-answer-container {
 	display: grid;
-	grid-template-rows: auto auto;
+	grid-template-rows: auto 75%;
 	grid-template-columns: auto auto;
 
 	box-sizing: border-box;
